fixed cutoff

--- a/src/Components/PollPage/PollPage.css
+++ b/src/Components/PollPage/PollPage.css
@@ -19,7 +19,7 @@ body, html {
 }
 
 .poll-content {
-  padding: 20px;
+  padding: 10px;
 }
 
 .poll-title {
